# cc-essentials

./: AGENTS.md  Cargo.toml  README.md
notes/: biome-caveats.md  cache-design.md  hooks-contract.md
src/: cache.rs  cli.rs  error_dump.rs  fs_util.rs  hook_io.rs  lib.rs  log.rs  main.rs
src/biome/: mod.rs  run.rs  schema.rs  summary.rs
src/commands/: doctor.rs  hooks_crite.rs  logs.rs  mod.rs
src/detect/: biome_bin.rs  biome_config.rs  mod.rs  package_manager.rs  repo.rs
tests/: cli_stubs.rs  doctor.rs  hooks_crite.rs  logs.rs
tests/fixtures/: biome_empty.json  biome_errors.json  biome_parse_error.json  biome_v2_real.json  biome_warnings.json
tests/snapshots/: doctor__empty.snap  doctor__full_stack.snap  doctor__git_only.snap  doctor__lockfile_no_biome.snap
