[package]
name = "cc-essentials"
version = "0.1.0"
edition = "2021"
description = "Claude Code essentials: doctor and post-tool formatting hook"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
which = "6"
regex = "1"
blake3 = "1"
dirs = "5"
tempfile = "3"
owo-colors = "4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = { version = "1", features = ["yaml"] }

[[bin]]
name = "cc-essentials"
path = "src/main.rs"

[lib]
name = "cc_essentials"
path = "src/lib.rs"

[profile.release]
lto = "thin"
strip = "symbols"
